objects/zkups__QueuedPackageSpecialServices__c.object
<CustomObject>
    <fields>
        <fullName>zkups__AdditionalHandling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DeliverWithoutSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver Without Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DryIceMedicalUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry Ice Medical Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DryIceRegulationSet__c</fullName>
        <label>Dry Ice Regulation Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>IATA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__DryIceWeight__c</fullName>
        <label>Dry Ice Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__VerbalConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verbal Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <label>UPS Queued Package Special Services</label>
    <nameField>
        <displayFormat>Queued-Package-SS-{00000000}</displayFormat>
        <label>Queued Package Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Queued Package Special Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>